--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     margin: 0;   
+    font-family:'Maven Pro', sans-serif;
   
   }
 
@@ -338,14 +339,15 @@ footer {
 
 /* ------Desktop version Booking-page------*/
 
-@media (min-width:600px){
+@media (min-width:900px){
 
     .main--booking {
         display: grid;
         grid-template-columns: 1fr 2fr 2fr 1fr; 
         grid-template-rows: repeat(8, 1fr);
-        overflow: scroll;
+        /* overflow: scroll; */
         color: #fff ;
+        min-width:60em;
     }
     
     /* Room 1 */
